# task-butler

./: Makefile  README.ja.md  README.md  config.sample.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: AI_SETUP.en.md  AI_SETUP.md  COOKBOOK.en.md  COOKBOOK.md  DESIGN.en.md  DESIGN.md  ISSUE_AI_INTEGRATION.md  OBSIDIAN.en.md  OBSIDIAN.md
scripts/: task-butler-completion.bash
src/task_butler/: config.py
src/task_butler/ai/: __init__.py  analyzer.py  base.py  model_manager.py  planner.py  prompts.py  suggester.py
src/task_butler/ai/providers/: __init__.py  llama.py  rule_based.py
src/task_butler/cli/: main.py
src/task_butler/cli/commands/: __init__.py  add.py  ai_cmd.py  analyze.py  config_cmd.py  list_cmd.py  obsidian.py  plan.py  show.py  status.py  suggest.py
src/task_butler/core/: __init__.py  recurrence.py  task_manager.py
src/task_butler/models/: __init__.py  enums.py  task.py
src/task_butler/storage/: __init__.py  markdown.py  obsidian.py  repository.py
tests/: __init__.py  conftest.py  test_ai.py  test_cli.py  test_completion.py  test_config.py  test_core.py  test_models.py  test_obsidian.py  test_storage.py
