[project]
name = "task-butler"
version = "0.1.0"
description = "A task management tool that helps prioritize and recommend actions - your digital butler for tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "python-frontmatter>=1.0.0",
    "rich>=13.0.0",
    "tomli-w>=1.0.0",
]

[project.scripts]
task-butler = "task_butler.cli.main:app"
tb = "task_butler.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/task_butler"]

[tool.hatch.build.targets.sdist]
include = ["src/task_butler"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
